gateway/istio-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata: 
  name: istio-gateway-vs
spec:
  hosts: 
  - "spatika.com"  
  - "app-svc.default.svc.cluster.local"
  gateways:
  - istio-ingress-gateway
  http:
  - route:
     - destination:
         host: app-svc.default.svc.cluster.local
         subset: app-service-subset
       weight: 0
     - destination: 
         host: app2-svc.default.svc.cluster.local
         subset: app2-service-subset
       weight: 100

---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata: 
  name: istio-gateway-destination-rule1
spec: 
  host: app-svc.default.svc.cluster.local
  subsets: 
  - name: app-service-subset
    labels:
      app: app1
      version: v1
      chapter: istio
      topic: traffic-management
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN

---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata: 
  name: istio-gateway-destination-rule2
spec: 
  host: app2-svc.default.svc.cluster.local
  subsets: 
  - name: app2-service-subset
    labels:
      app: app1
      version: v2
      chapter: istio
      topic: traffic-management
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
